--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ pageTitle: Plantes sauvages commestibles de l'Aude
 ---
 
 {% for post in collections.posts %}
-  <h3><a href="{{ post.url | url }}">{{ post.data.pageTitle }} <i> {{ post.data.subTitle }}</i</a></h3>
+  <h3><a href="{{ post.url }}">{{ post.data.pageTitle }} <i> {{ post.data.subTitle }}</i</a></h3>
 {% endfor %}
