--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>Blog plantes sauvages commestible de l'Aude région occitanie</title>
-    <link rel="stylesheet" type="text/css" href="css/blogPlantes.css">
+    <link rel="stylesheet" type="text/css" href=".">
     <link href="https://fonts.googleapis.com/css?family=Berkshire+Swash" rel="stylesheet">
     <link href="https://fonts.googleapis.com/css?family=Montez|Tangerine" rel="stylesheet">
   </head>
@@ -32,9 +32,9 @@
         <h3><b>Liste des plantes</b></h3>
         
 
-  <h3><a href="/posts/AilDesOurs/">Ail des ours <i> (Allium ursinum)</i</a></h3>
+  <h3><a href="/blog_plantes/posts/AilDesOurs/">Ail des ours <i> (Allium ursinum)</i</a></h3>
 
-  <h3><a href="/posts/achilleeMillefeuille/">Achillée millefeuille <i> (Achillea millefolium)</i</a></h3>
+  <h3><a href="/blog_plantes/posts/achilleeMillefeuille/">Achillée millefeuille <i> (Achillea millefolium)</i</a></h3>
 
 
       </section>
