deploy: 34623ab961dc4324ad5c7f3b4b6f48cb3660f730

--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
         <h3><b>Liste des plantes</b></h3>
         
 
-  <h3><a href="/blog_plantes/posts/AilDesOurs/">Ail des ours <i> (Allium ursinum)</i</a></h3>
+  <h3><a href="/posts/AilDesOurs/">Ail des ours <i> (Allium ursinum)</i</a></h3>
 
-  <h3><a href="/blog_plantes/posts/achilleeMillefeuille/">Achillée millefeuille <i> (Achillea millefolium)</i</a></h3>
+  <h3><a href="/posts/achilleeMillefeuille/">Achillée millefeuille <i> (Achillea millefolium)</i</a></h3>
 
 
       </section>
