deploy: ebb75bdfd0f763fe0675f1be432ff84c11e80c65

--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
       <section class="section">
         <h3><b>Liste des plantes</b></h3>
         <h4><a href="/blog_plantes/posts/AilDesOurs/">Ail des ours <i> (Allium ursinum)</i></a></h4>
+<h4><a href="/blog_plantes/posts/Bourrache/">Bourrache <i> (Borago officinalis)</i></a></h4>
+<h4><a href="/blog_plantes/posts/CamomilleMatricaire/">Camomille matricaire <i> (Matricaria chamomilla)</i></a></h4>
+<h4><a href="/blog_plantes/posts/ChenopodeBlanc/">Chénopode blanc <i> (Chenopodium album)</i></a></h4>
 <h4><a href="/blog_plantes/posts/achilleeMillefeuille/">Achillée millefeuille <i> (Achillea millefolium)</i></a></h4>
 
 
