deploy: fdba959651538bc5741819bbe58204c7fe52aa3c

--- a/index.html
+++ b/index.html
@@ -35,6 +35,7 @@
 <h4><a href="/blog_plantes/posts/Bourrache/">Bourrache <i> (Borago officinalis)</i></a></h4>
 <h4><a href="/blog_plantes/posts/CamomilleMatricaire/">Camomille matricaire <i> (Matricaria chamomilla)</i></a></h4>
 <h4><a href="/blog_plantes/posts/ChenopodeBlanc/">Chénopode blanc <i> (Chenopodium album)</i></a></h4>
+<h4><a href="/blog_plantes/posts/Consoude/">Consoude <i> (Symphytum officinale)</i></a></h4>
 <h4><a href="/blog_plantes/posts/achilleeMillefeuille/">Achillée millefeuille <i> (Achillea millefolium)</i></a></h4>
 
 
