--- a/index.html
+++ b/index.html
@@ -4,5 +4,5 @@ pageTitle: Plantes sauvages commestibles de l'Aude
 ---
 
 {%- for post in collections.posts -%}
-  <h4><a href="{{ post.url | url }}">{{ post.data.pageTitle }} <i> {{ post.data.subTitle }}</i></a></h4>
+  <h4><a href="{{ post.url | url }}" id="{{ post.data.pageTitle }}">{{ post.data.pageTitle }} <i> {{ post.data.subTitle }}</i></a></h4>
 {% endfor %}
